Refactor: Replace UUIDs with Long IDs, streamline validations, and add ShoppingCartPrinter
- Replaced UUIDs with Long IDs across the application.
- Simplified argument validations by removing curly braces.
- Created ShoppingCartPrinter for handling cart printing tasks.

Addresses feedback from the pull request review.