@@ -1,4 +1,5 @@
 import model.*;
+import service.ShoppingCartPrinter;
 import service.ShoppingCartService;
 import utils.DataFactory;
 
@@ -13,7 +14,7 @@ public class Main {
         /////////////////*BUILDING OBJECTS*/////////////////
 
         //Create a Customer named JOHN SMITH with your favourite birth date.
-        Customer johnSmith = new Customer("John", "Smith", LocalDate.of(1992, 9, 18), "facundobraga@hotmail.com", "+54 3624-123456", "12345678");
+        Customer johnSmith = new Customer(1L, "John", "Smith", LocalDate.of(1992, 9, 18), "facundobraga@hotmail.com", "+54 3624-123456", "12345678");
 
         //Create list of 5 products of each type:
         List<Product> electronics = DataFactory.createElectronicProducts();
@@ -21,23 +22,23 @@ public class Main {
         List<Product> others = DataFactory.createOtherProducts();
 
         //Create a shopping cart with 4 ELECTRONIC products
-        ShoppingCart electronicCart = new ShoppingCart(johnSmith, Arrays.asList(
-                new ShoppingCartItem(electronics.get(0), 1),
-                new ShoppingCartItem(electronics.get(1), 2),
-                new ShoppingCartItem(electronics.get(2), 1),
-                new ShoppingCartItem(electronics.get(4), 3)
+        ShoppingCart electronicCart = new ShoppingCart(1L, johnSmith, Arrays.asList(
+                new ShoppingCartItem(1L, electronics.get(0), 1),
+                new ShoppingCartItem(2L, electronics.get(1), 2),
+                new ShoppingCartItem(3L, electronics.get(2), 1),
+                new ShoppingCartItem(4L, electronics.get(4), 3)
         ));
 
         //Create a shopping cart with 3 LIBRARY products
-        ShoppingCart libraryCart = new ShoppingCart(johnSmith, Arrays.asList(
-                new ShoppingCartItem(libraries.get(1), 1),
-                new ShoppingCartItem(libraries.get(2), 1),
-                new ShoppingCartItem(libraries.get(3), 1)
+        ShoppingCart libraryCart = new ShoppingCart(2L, johnSmith, Arrays.asList(
+                new ShoppingCartItem(5L, libraries.get(1), 1),
+                new ShoppingCartItem(6L, libraries.get(2), 1),
+                new ShoppingCartItem(7L, libraries.get(3), 1)
         ));
 
         //Create a shopping cart with 1 OTHER products
-        ShoppingCart otherCart = new ShoppingCart(johnSmith, Arrays.asList(
-                new ShoppingCartItem(others.get(0), 1)
+        ShoppingCart otherCart = new ShoppingCart(3L, johnSmith, List.of(
+                new ShoppingCartItem(8L, others.get(0), 1)
         ));
 
         //Submit a Shopping Cart
@@ -48,28 +49,32 @@ public class Main {
 
         //Create an instance of ShoppingCartService to use methods
         ShoppingCartService cartService = new ShoppingCartService();
+
+        //Create an instance of ShoppingCartPrinter to use print methods
+        ShoppingCartPrinter cartPrinter = new ShoppingCartPrinter();
+
         //Create a mixed products cart:
-        ShoppingCart mixedCart = new ShoppingCart(johnSmith, new ArrayList<>());
+        ShoppingCart mixedCart = new ShoppingCart(4L, johnSmith, new ArrayList<>());
 
         // Add items with "addItem" method of ShoppingCartService Class
-        cartService.addItem(mixedCart, new ShoppingCartItem(electronics.get(0), 1));
-        cartService.addItem(mixedCart, new ShoppingCartItem(electronics.get(1), 1));
-        cartService.addItem(mixedCart, new ShoppingCartItem(electronics.get(2), 1));
+        cartService.addItem(mixedCart, new ShoppingCartItem(9L, electronics.get(0), 1));
+        cartService.addItem(mixedCart, new ShoppingCartItem(10L, electronics.get(1), 1));
+        cartService.addItem(mixedCart, new ShoppingCartItem(11L, electronics.get(2), 1));
 
-        cartService.addItem(mixedCart, new ShoppingCartItem(libraries.get(1), 1));
-        cartService.addItem(mixedCart, new ShoppingCartItem(libraries.get(3), 1));
-        cartService.addItem(mixedCart, new ShoppingCartItem(libraries.get(4), 1));
+        cartService.addItem(mixedCart, new ShoppingCartItem(12L, libraries.get(1), 1));
+        cartService.addItem(mixedCart, new ShoppingCartItem(13L, libraries.get(3), 1));
+        cartService.addItem(mixedCart, new ShoppingCartItem(14L, libraries.get(4), 1));
 
-        cartService.addItem(mixedCart, new ShoppingCartItem(others.get(1), 2));
-        cartService.addItem(mixedCart, new ShoppingCartItem(others.get(3), 3));
-        cartService.addItem(mixedCart, new ShoppingCartItem(others.get(4), 1));
+        cartService.addItem(mixedCart, new ShoppingCartItem(15L, others.get(1), 2));
+        cartService.addItem(mixedCart, new ShoppingCartItem(16L, others.get(3), 3));
+        cartService.addItem(mixedCart, new ShoppingCartItem(17L, others.get(4), 1));
 
 
         //Given a shopping cart with a list of products in different categories (At least 3 for category). Please do the following:
 
         //Calculate and Print all products with price > 100 and product type is library
         System.out.println("*All products with price > 100 and type Library: ");
-        cartService.printProductsAbovePriceAndType(mixedCart, BigDecimal.valueOf(100), ProductType.LIBRARY);
+        cartPrinter.printProductsAbovePriceAndType(mixedCart, BigDecimal.valueOf(100), ProductType.LIBRARY);
 
         System.out.println();
 
@@ -83,7 +88,7 @@ public class Main {
         System.out.println();
         //Calculate and Print all information of the shopping cart ordered by price
         System.out.println("*All information of shopping cart ordered by price: ");
-        cartService.printCartDetailsOrderedByPrice(mixedCart);
+        cartPrinter.printCartDetailsOrderedByPrice(mixedCart);
 
     }
 }
